<resources>
    <string name="app_name">健康监测系统</string>
    <string name="app_exithint">再单击一次退出程序</string>

    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="login_nameHint">请输入用户名</string>
    <string name="login_pwdHint">请输入密码</string>
    <string name="login_emptyNameHint">用户名为空</string>
    <string name="login_emptyPwdHint">密码为空</string>
    <string name="login_failuerLogin">用户名或密码错误</string>


    <string name="register_reconfirmPwd">确认密码</string>
    <string name="register_register">确定注册</string>
    <string name="register_succeed">注册成功</string>

    <string-array name="register_username_error">
        <item>@string/register_username_notUnique</item>
        <item>@string/register_username_errorLength</item>
    </string-array>
    <string name="register_username_notUnique">用户名已经存在</string>
    <string name="register_username_errorLength">用户长度为2~10个字符</string>

    <string-array name="register_userpwd_error">
        <item>@string/register_userpwd_errorFormat</item>
        <item>@string/register_userpwd_errorLength</item>
    </string-array>
    <string name="register_userpwd_errorFormat">密码只能包含英文大小写与数字字符</string>
    <string name="register_userpwd_errorLength">密码长度为9~16</string>

    <string-array name="register_userpedRe_error">
        <item>@string/register_userpwd_disaffinity</item>
    </string-array>
    <string name="register_userpwd_disaffinity">两次输入密码不同</string>

    <string-array name="register_userage_error">
        <item>@string/register_userage_outRange</item>
    </string-array>
    <string name="register_userage_outRange">年龄范围(0~200)</string>

    <string-array name="register_usertel_error">
        <item>@string/register_usertel_outLength</item>
    </string-array>
    <string name="register_usertel_outLength">电话号码过长</string>

    <string name="register_savefailure">注册失败，请重新注册</string>

    <!--    用户信息    -->
    <string name="units_userinfo_name">用户名</string>
    <string name="units_userinfo_password">密码</string>
    <string name="units_userinfo_gender">性别</string>
    <string name="units_userinfo_age">年龄</string>
    <string name="units_userinfo_tel">联系电话</string>

    <!--    主页导航栏选项 -->
    <!--    Navigation页文字定义  -->
    <string name="navigation_optname_monitor">实时诊断</string>
    <string name="navigation_optname_history">历史数据</string>
    <string name="navigation_optname_set">我的设置</string>
    <string name="navigation_optname_logout">注销</string>

    <string name="navigation_logout_hint">确定要注销账号，重新登录</string>

    <integer-array name="navigation_optionitem_icon">
        <item name="navigation_opticon_monitor">@drawable/icon_optionitem_monitor</item>
        <item name="navigation_opticon_history">@drawable/icon_optionitem_playback</item>
        <item name="navigation_opticon_set">@drawable/icon_optionitem_set</item>
        <item name="navigation_opticon_logout">@drawable/icon_optionitem_logout</item>
    </integer-array>

    <!--    实时监测    -->
    <string name="bluetooth_title">蓝牙配对</string>
    <string name="empty"></string>
    <string name="open_bt">打开蓝牙</string>
    <string name="close_bt">关闭蓝牙</string>
    <string name="invalid_bt">本设备不支持蓝牙，请检查设备</string>

    <string name="start_search">搜索设备</string>
    <string name="stop_search">停止搜索</string>

    <string name="device_name">蓝牙名称</string>
    <string name="device_addr">蓝牙地址</string>


    <string name="data_receive">健康数据监测</string>
    <string name="receive_begin">开始接收</string>
    <string name="receive_stop">停止接收</string>
    <string name="send_data">发送</string>
    <string name="send_hint">输入要发送数据</string>
    <string name="clear">清除</string>
    <string name="pulse">脉搏</string>
    <string name="ecg">心电</string>

    <string name="Device_Name">蓝牙名称</string>
    <string name="Device_Address">蓝牙地址</string>

    <string name="Pairing">配对</string>
    <string name="Auto_Pairing">自动配对</string>
    <string name="Set_Default">设置为默认设备</string>
    <string name="Select_Ok">好的</string>
    <string name="Select_Cancel">再说</string>
    <string name="Show_Cancel">确定</string>

    <string name="save_receive_data">保存采集结果</string>

    <string name="search_history_title">历史记录查询</string>
    <string name="choose_date_hint">请选择查询范围</string>
    <string name="search_history">搜索记录</string>

    <string name="search_history_detail_title">历史监测记录</string>

    <string name="units_connector_colon">: </string>

    <string name="revise_user_title">个人信息修改</string>
    <string name="revise_user_confirm">确认修改</string>
    <string name="revise_user_hint_confirm">是否确认修改</string>
    <string name="revise_user_hint_success">修改成功</string>
    <string name="revise_user_hint_failure">修改失败，请重新尝试</string>
    
    <!-- 	性别	 -->
    <string name="units_gender">性别</string>
    <string name="units_gender_man">男</string>
    <string name="units_gender_woman">女</string>

    <!-- 	选项单位	 -->
    <string name="units_options_ok">确定</string>
    <string name="units_options_cancel">取消</string>
    <string name="units_options_change">更改</string>
    <string name="units_options_next">下一个</string>
    <string name="units_options_previous">上一个</string>
    <string name="units_options_finish">完成</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
