<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="homeButtonViewModel"
            type="com.android.zhangziyu.healthmonitorwithbluetooth.ViewModel.ButtonViewModel.HomeButtonViewModel"/>
    </data>

    <RelativeLayout
        android:id="@+id/home_rl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:clipToPadding="false"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/home_btn_monitor"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_above="@+id/home_btn_history"
            android:layout_margin="30dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/navigation_optname_monitor"
            android:textColor="@color/buttonText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{homeButtonViewModel.onClick}"/>

        <Button
            android:id="@+id/home_btn_history"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_background"
            android:layout_margin="30dp"
            android:padding="5dp"
            android:text="@string/navigation_optname_history"
            android:textColor="@color/buttonText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{homeButtonViewModel.onClick}"/>

        <Button
            android:id="@+id/home_btn_set"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/home_btn_history"
            android:layout_margin="30dp"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:text="@string/navigation_optname_set"
            android:textColor="@color/buttonText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="@{homeButtonViewModel.onClick}"/>

    </RelativeLayout>
</layout>
